test_regress/t/t_randomize.out
%Warning-CONSTRAINTIGN: t/t_randomize.v:16:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   16 |    constraint empty {}
      |               ^~~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Warning-CONSTRAINTIGN: t/t_randomize.v:18:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   18 |    constraint size {
      |               ^~~~
%Warning-CONSTRAINTIGN: t/t_randomize.v:25:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   25 |    constraint ifs {
      |               ^~~
%Warning-CONSTRAINTIGN: t/t_randomize.v:36:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   36 |    constraint arr_uniq {
      |               ^~~~~~~~
%Warning-CONSTRAINTIGN: t/t_randomize.v:43:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   43 |    constraint order { solve length before header; }
      |               ^~~~~
%Warning-CONSTRAINTIGN: t/t_randomize.v:45:15: Constraint ignored (unsupported)
                                             : ... note: In instance 't'
   45 |    constraint dis {
      |               ^~~
%Error-UNSUPPORTED: t/t_randomize.v:14:13: Unsupported: random member variable with type 'int$[0:1]'
                                         : ... note: In instance 't'
   14 |    rand int array[2];   
      |             ^~~~~
%Error: Exiting due to
